src/test/ui/feature-gates/feature-gate-compiler-builtins.stderr
error[E0658]: the `#[compiler_builtins]` attribute is used to identify the `compiler_builtins` crate which contains compiler-rt intrinsics and will never be stable
  --> $DIR/feature-gate-compiler-builtins.rs:1:1
   |
LL | #![compiler_builtins]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(compiler_builtins)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
